// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input adds \`autocomplete\` attribute 1`] = `
<Input
  autoComplete="given-name"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoComplete="given-name"
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`autofocus\` attribute 1`] = `
<Input
  onChange={[Function]}
  shouldFocusOnPageLoad={true}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={true}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`dataTest\` prop 1`] = `
<Input
  dataTest="Duck"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      data-test="Duck"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`disabled\` attribute 1`] = `
<Input
  isDisabled={true}
  onChange={[Function]}
>
  <div
    className="root rootUiStateDisabled"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDisabled"
    />
  </div>
</Input>
`;

exports[`Input adds \`id\` attribute 1`] = `
<Input
  id="Goose"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      id="Goose"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`inputMode\` prop 1`] = `
<Input
  inputMode="numeric"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      inputMode="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`maxLength\` prop 1`] = `
<Input
  maxLength={5}
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      maxLength={5}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`pattern\` prop 1`] = `
<Input
  onChange={[Function]}
  pattern="[0-9]{5}"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      pattern="[0-9]{5}"
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds \`readonly\` attribute 1`] = `
<Input
  isReadOnly={true}
  onChange={[Function]}
>
  <div
    className="root rootUiStateReadonly"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateReadonly"
    />
  </div>
</Input>
`;

exports[`Input adds \`required\` attribute 1`] = `
<Input
  isRequired={true}
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={true}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds name 1`] = `
<Input
  name="my-input"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      name="my-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input adds placeholder 1`] = `
<Input
  onChange={[Function]}
  placeholder="Name"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder="Name"
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input innerLeft renders \`innerLeft\` node when HTML element is provided 1`] = `
<Input
  innerLeft={
    <div>
      Goose
    </div>
  }
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <div
      className="inputInnerElement"
      onClick={[Function]}
    >
      <div>
        Goose
      </div>
    </div>
    <input
      autoFocus={false}
      className="input inputSizeLarge inputInnerLeft"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input innerLeft renders \`innerLeft\` node when text is provided 1`] = `
<Input
  innerLeft="Goose"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <div
      className="inputInnerElement"
      onClick={[Function]}
    >
      Goose
    </div>
    <input
      autoFocus={false}
      className="input inputSizeLarge inputInnerLeft"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input innerRight renders \`innerRight\` node when HTML element is provided 1`] = `
<Input
  innerRight={
    <div>
      Goose
    </div>
  }
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge inputInnerRight"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputInnerElement"
      onClick={[Function]}
    >
      <div>
        Goose
      </div>
    </div>
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input innerRight renders \`innerRight\` node when text is provided 1`] = `
<Input
  innerRight="Goose"
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge inputInnerRight"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputInnerElement"
      onClick={[Function]}
    >
      Goose
    </div>
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders \`value\` as the input value 1`] = `
<div
  class="root rootUiStateDefault"
>
  <input
    class="input inputSizeLarge"
    type="text"
    value="Goose"
  />
  <div
    class="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
  />
</div>
`;

exports[`Input renders email input when requested 1`] = `
<Input
  onChange={[Function]}
  type="email"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="email"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders large input 1`] = `
<Input
  onChange={[Function]}
  size="large"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders number input when requested 1`] = `
<Input
  onChange={[Function]}
  type="number"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="number"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders search input when requested 1`] = `
<Input
  onChange={[Function]}
  type="search"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="search"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders small input 1`] = `
<Input
  onChange={[Function]}
  size="small"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeSmall"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders telephone input when requested 1`] = `
<Input
  onChange={[Function]}
  type="tel"
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="tel"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`Input renders text input by default 1`] = `
<Input
  onChange={[Function]}
>
  <div
    className="root rootUiStateDefault"
  >
    <input
      autoFocus={false}
      className="input inputSizeLarge"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
    <div
      className="inputStyles inputStylesRoundedBordersLeft inputStylesRoundedBordersRight inputStylesUiStateDefault"
    />
  </div>
</Input>
`;

exports[`InputClearButton includes \`aria-label\` on button to describe the SVG icon 1`] = `
<InputClearButton
  onClick={[Function]}
>
  <InputIconContainer>
    <div
      className="inputIconContainer inputIconContainerPositionLeft"
    >
      <div
        className="displayNone"
      >
        <button
          aria-label="Clear input"
          className="unstyledButton"
          onClick={[Function]}
          type="button"
        >
          <NavigationCloseSmall
            fill="currentColor"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              fill="currentColor"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                fillRule="evenodd"
              />
            </svg>
          </NavigationCloseSmall>
        </button>
      </div>
    </div>
  </InputIconContainer>
</InputClearButton>
`;

exports[`InputClearButton renders an SVG icon 1`] = `
<InputClearButton
  onClick={[Function]}
>
  <InputIconContainer>
    <div
      className="inputIconContainer inputIconContainerPositionLeft"
    >
      <div
        className="displayNone"
      >
        <button
          aria-label="Clear input"
          className="unstyledButton"
          onClick={[Function]}
          type="button"
        >
          <NavigationCloseSmall
            fill="currentColor"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              fill="currentColor"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                fillRule="evenodd"
              />
            </svg>
          </NavigationCloseSmall>
        </button>
      </div>
    </div>
  </InputIconContainer>
</InputClearButton>
`;

exports[`InputIcon applies color prop 1`] = `
<InputIcon
  color="LightGoldenRodYellow"
>
  <InputIconContainer
    style={
      Object {
        "color": "LightGoldenRodYellow",
      }
    }
  >
    <div
      className="inputIconContainer inputIconContainerPositionLeft"
      style={
        Object {
          "color": "LightGoldenRodYellow",
        }
      }
    >
      Goose
    </div>
  </InputIconContainer>
</InputIcon>
`;

exports[`InputIcon renders children 1`] = `
<InputIcon>
  <InputIconContainer
    style={
      Object {
        "color": "inherit",
      }
    }
  >
    <div
      className="inputIconContainer inputIconContainerPositionLeft"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      <svg>
        <title>
          Goose
        </title>
      </svg>
    </div>
  </InputIconContainer>
</InputIcon>
`;
